# tiny-dpcpp-nn

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  third-party-programs.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/manual/: build.doctree  contributing.doctree  encodings.doctree  examples.doctree  index.doctree  networks.doctree  pytorch.doctree
_sources/manual/: build.rst.txt  contributing.rst.txt  encodings.rst.txt  examples.rst.txt  networks.rst.txt  pytorch.rst.txt
api/: index.html
benchmarks/: CMakeLists.txt  benchmark_all.cpp  benchmark_all_torch.cpp  benchmark_encoding.cpp  benchmark_encoding.hpp  benchmark_inference.cpp  benchmark_inference.h  benchmark_inference_torch.cpp  benchmark_inference_torch.h  benchmark_training.cpp  benchmark_training.h  benchmark_training_torch.cpp  benchmark_training_torch.h  common_benchmarks.h  plot_results.py
benchmarks/results/: bench_result_dpcpp_width32_readme.json  bench_result_dpcpp_width64_readme.json  bench_result_pytorch_xpu_width32_readme.json  bench_result_pytorch_xpu_width64_readme.json
cmake/: CommonOptions.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  conf.py  index.rst
docs/api/: index.rst
docs/manual/: build.rst  contributing.rst  encodings.rst  examples.rst  index.rst
dpcpp_bindings/: CMakeLists.txt  pyproject.toml  requirements.txt  setup.py  setup2.py
dpcpp_bindings/tiny_dpcpp_nn/: __init__.py  modules.py  pybind_module.cpp
include/: common_host.h  config.h  sycl_graph.h  tnn_api.h  trainer.h  trainer_torch.h
include/common/: DeviceMatrix.h  DeviceMem.h  ScopeGuard.h  SyclGraph.h  common.h  common_device.h  gemm.h  io.h  result_check.h  tensor_legacy_helper.h  vec.h
include/encodings/: encoding.h  encoding_factory.h  frequency.h  grid.h  grid_interface.h  identity.h  spherical_harmonics.h
include/losses/: cross_entropy.h  l1.h  l2.h  loss.h
include/network/: Network.h  SwiftNetMLP.h  kernel.h  kernel_esimd.h  kernel_helper.h  network_with_encodings.h
include/optimizers/: adam.h  optimizer.h  sgd.h
manual/: build.html  contributing.html  encodings.html  examples.html  index.html  networks.html  pytorch.html
python/: .gitignore  benchmark_pytorch.py  mlp_learning_an_image_pytorch.py  requirements.txt
python/data/: config_hash.json
python/tests/: CMakeLists.txt  mlp.py  test_compare_torch_dpcpp.py  test_encodings.py  test_precision.py  test_training_classification.py  utils.py
samples/: benchmark_pytorch.py  mlp_learning_an_image_pytorch.py
samples/data/: config_frequency.json  config_hash.json
samples/src/: common.py  mlp_benchmark.py
source/: CMakeLists.txt
source/common/: CMakeLists.txt  SyclGraph.cpp  common.cpp
source/network/: CMakeLists.txt  SwiftNetMLP.cpp  SwiftNetMLPbf16128.cpp  SwiftNetMLPbf1616.cpp  SwiftNetMLPbf1632.cpp  SwiftNetMLPbf1664.cpp  SwiftNetMLPfp16128.cpp  SwiftNetMLPfp1616.cpp  SwiftNetMLPfp1632.cpp  SwiftNetMLPfp1664.cpp  kernel_esimd.cpp  kernel_esimdbf16128none.cpp  kernel_esimdbf16128relu.cpp  kernel_esimdbf16128sigmoid.cpp  kernel_esimdbf1616none.cpp  kernel_esimdbf1616relu.cpp  kernel_esimdbf1616sigmoid.cpp  kernel_esimdbf1632none.cpp  kernel_esimdbf1632relu.cpp  kernel_esimdbf1632sigmoid.cpp  kernel_esimdbf1664none.cpp  kernel_esimdbf1664relu.cpp  kernel_esimdbf1664sigmoid.cpp  kernel_esimdfp16128none.cpp  kernel_esimdfp16128relu.cpp  kernel_esimdfp16128sigmoid.cpp  kernel_esimdfp1616none.cpp  kernel_esimdfp1616relu.cpp  kernel_esimdfp1616sigmoid.cpp  kernel_esimdfp1632none.cpp  kernel_esimdfp1632relu.cpp  kernel_esimdfp1632sigmoid.cpp  kernel_esimdfp1664none.cpp  kernel_esimdfp1664relu.cpp  kernel_esimdfp1664sigmoid.cpp
source/optimizers/: adam.cpp  sgd.cpp
test/: CMakeLists.txt  common_test.h  doctest_common.cpp  doctest_device_precision.cpp  doctest_devicematrix.cpp  doctest_devicemem.cpp  doctest_encodings.cpp  doctest_gemm.cpp  doctest_kernel_esimd.cpp  doctest_losses.cpp  doctest_network_with_encodings.cpp  doctest_packing.cpp  doctest_swiftnet.cpp  doctest_torch_encodings.cpp  doctest_torch_memory.cpp  doctest_torch_network.cpp  doctest_torch_network_with_encodings.cpp  main.cpp  mlp.h  run_tests.sh
test/python/: mlp.py  mlp_grad_test.py  test_clnerf.py  test_compare_torch_dpcpp.py  test_encoding_fwd.py  test_encodings.py  test_nerf_settings.py  test_packed_layout.py  test_packing.py  test_padding_bias.py  test_set_param.py  test_train_grid.py  test_training.py  test_training_classification.py  test_training_regression.py
test/python/src/: mlp.py  utils.py
